<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="FB_StateDisabled" Id="{d1cd4ba5-bb4f-4099-a180-cb41c9ee3f71}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_StateDisabled
VAR_IN_OUT
	stAxis  : ARRAY [GVL.cXP .. GVL.cXM] OF ST_AxisGroup;
	bTopentry : BOOL;
END_VAR
VAR_INPUT

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bTopEntry = TRUE THEN
	bTopEntry := FALSE;
END_IF	
	
stAxis[GVL.cXP].mcPower(Axis := stAxis[GVL.cXP].axisRef, Enable := TRUE, Enable_Positive := FALSE, Enable_Negative := FALSE);
stAxis[GVL.cXM].mcPower(Axis := stAxis[GVL.cXM].axisRef, Enable := TRUE, Enable_Positive := FALSE, Enable_Negative := FALSE);	
stAxis[GVL.cXP].mcHome(Axis := stAxis[GVL.cXP].axisRef, Execute := FALSE);
stAxis[GVL.cXM].mcHome(Axis := stAxis[GVL.cXP].axisRef, Execute := FALSE);
stAxis[GVL.cXP].mcReset(Axis := stAxis[GVL.cXP].axisRef, Execute := FALSE);
stAxis[GVL.cXM].mcReset(Axis := stAxis[GVL.cXM].axisRef, Execute := FALSE);
stAxis[GVL.cXP].bBrake 	:= GVL.cBrakeOn;
stAxis[GVL.cXM].bBrake 	:= GVL.cBrakeOn;
GVL.fbWaitTimer(IN:=FALSE);]]></ST>
    </Implementation>
    <LineIds Name="FB_StateDisabled">
      <LineId Id="51" Count="1" />
      <LineId Id="26" Count="1" />
      <LineId Id="50" Count="0" />
      <LineId Id="28" Count="6" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>